Update popup.html for Olivia's Adblocker

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="uBO-popup-panel" class="desktop">
+<html id="olivia-popup-panel" class="desktop">
 
 <head>
 <meta charset="utf-8">
@@ -10,12 +10,22 @@
 <link rel="stylesheet" href="css/fa-icons.css">
 <link rel="stylesheet" href="css/filtering-mode.css">
 <link rel="stylesheet" href="css/popup.css">
-<title data-i18n="extName"></title>
+<link rel="stylesheet" href="css/olivia-custom.css">
+<title data-i18n="extName">👩 Urbanmove Olivia's Adblocker</title>
 </head>
 
-<body class="loading">
+<body class="loading olivia-theme">
 
 <div id="main">
+    <!-- Olivia's Header -->
+    <div id="olivia-header">
+        <div class="olivia-logo">
+            <span class="olivia-icon">👩</span>
+            <span class="olivia-title">Olivia's Adblocker</span>
+        </div>
+        <div class="olivia-tagline">✨ Powered by uBlock Origin • GNU GPL 3.0</div>
+    </div>
+    
     <div id="hostname"><span></span>&shy;<span></span></div>
     <!-- -------- -->
     <div class="filteringModeSlider">
